Bug 993435 - Not return null for navigator.connection. r=bz